--- a/spinlock/makefile
+++ b/spinlock/makefile
@@ -2,12 +2,12 @@ CROSS_COMPILE = riscv32-unknown-elf-
 CC = $(CROSS_COMPILE)gcc
 LD = $(CROSS_COMPILE)ld
 
-CFLAGS = -march=rv32i_zicsr -mabi=ilp32 -ffreestanding -nostdlib -nostartfiles -O0 -g
+CFLAGS = -march=rv32ia_zicsr -mabi=ilp32 -ffreestanding -nostdlib -nostartfiles -O0 -g
 LDFLAGS = -T linker.ld
 
 BUILD_DIR = build
 OBJS = $(BUILD_DIR)/start.o $(BUILD_DIR)/main.o $(BUILD_DIR)/uart.o $(BUILD_DIR)/trap.o \
-       $(BUILD_DIR)/context.o $(BUILD_DIR)/timer.o $(BUILD_DIR)/tasks.o
+       $(BUILD_DIR)/context.o $(BUILD_DIR)/timer.o $(BUILD_DIR)/tasks.o $(BUILD_DIR)/spinlock.o
 
 all: $(BUILD_DIR)/kernel.elf
 
